--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   "author": "Arbaaz",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.5.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
+    "nodemailer": "^6.9.5",
+    "validator": "^13.11.0"
   }
 }
