--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "mongoose": "^7.5.0",
     "nodemailer": "^6.9.5",
     "validator": "^13.11.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3"
   }
 }
